# foundation-libs

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: dependency-scan.yml  linux.yml  macos.yml  release-vsi.yml  release.yml  static-analysis.yml  style.yml  tests.yml  windows.yml
archive/: Cargo.toml  README.md
archive/src/: error.rs  expand.rs  lib.rs  strategy.rs  test.rs
archive/src/expand/: all.rs  walk.rs
archive/src/strategy/: deny.rs  libarchive.rs
archive/tests/it/: local.rs  main.rs  ported_basis.rs  ported_cli.rs  ported_fossa.rs  testdata.rs  walk.rs
fingerprint/: Cargo.toml
fingerprint/src/: fingerprint.rs  lib.rs  tests.rs
snippets/: Cargo.toml
snippets/src/: language.rs  lib.rs  text.rs  tree_sitter_consts.rs
snippets/src/language/: c99_tc3.rs  cpp_98.rs  cpp_passthrough_c99_tc3.rs  normalize_code.rs  normalize_comments.rs  snippet_context.rs
snippets/src/text/: buffer.rs
snippets/tests/it/: language.rs  main.rs  tracing.rs
snippets/tests/it/language/: c99_tc3.rs  cpp_98.rs  cpp_passthrough_c99_tc3.rs
snippets/tests/it/language/c99_tc3/: extract.rs  support.rs
snippets/tests/it/language/testdata/cpp_passthrough_c99_tc3/: bare_function_in_namespace.cc
srclib/: Cargo.toml  README.md
srclib/src/: lib.rs  locator.rs  test.rs
traceconf/: Cargo.toml  Makefile  README.md
traceconf/src/: debug_output_format.rs  lib.rs  main.rs
traceconf/tests/it/: main.rs  output.rs
traceconf/tests/it/snapshots/: it__output__debug_output_format_disabled.snap  it__output__debug_output_format_json_colors.snap  it__output__debug_output_format_json_debug_active.snap  it__output__debug_output_format_json_debug_close.snap  it__output__debug_output_format_json_debug_enter.snap  it__output__debug_output_format_json_debug_exit.snap  it__output__debug_output_format_json_debug_full.snap  it__output__debug_output_format_json_debug_new.snap  it__output__debug_output_format_json_debug_off.snap  it__output__debug_output_format_json_error.snap  it__output__debug_output_format_json_info_active.snap  it__output__debug_output_format_json_info_close.snap  it__output__debug_output_format_json_info_enter.snap  it__output__debug_output_format_json_info_exit.snap  it__output__debug_output_format_json_info_full.snap  it__output__debug_output_format_json_info_new.snap  it__output__debug_output_format_json_info_off.snap  it__output__debug_output_format_json_trace_active.snap  it__output__debug_output_format_json_trace_close.snap  it__output__debug_output_format_json_trace_enter.snap  it__output__debug_output_format_json_trace_exit.snap  it__output__debug_output_format_json_trace_new.snap  it__output__debug_output_format_json_trace_off.snap  it__output__debug_output_format_json_warn.snap  it__output__debug_output_format_text_colors.snap  it__output__debug_output_format_text_debug_active.snap  it__output__debug_output_format_text_debug_close.snap  it__output__debug_output_format_text_debug_enter.snap  it__output__debug_output_format_text_debug_exit.snap  it__output__debug_output_format_text_debug_full.snap  it__output__debug_output_format_text_debug_new.snap  it__output__debug_output_format_text_debug_off.snap  it__output__debug_output_format_text_error.snap  it__output__debug_output_format_text_info_active.snap  it__output__debug_output_format_text_info_close.snap  it__output__debug_output_format_text_info_enter.snap  it__output__debug_output_format_text_info_exit.snap  it__output__debug_output_format_text_info_full.snap  it__output__debug_output_format_text_info_new.snap  it__output__debug_output_format_text_info_off.snap  (+10 more)
tracer/: Cargo.toml  README.md
tracer/src/: lib.rs  main.rs
tracer/src/cmd/: diagnose.rs
vsi/: Cargo.toml
vsi/src/: api.rs  config.rs  forensics.rs  lib.rs  main.rs  scan.rs
vsi/src/api/: devnull.rs  fossa.rs
vsi/src/scan/: walk.rs
vsi/tests/it/: main.rs  runner.rs
