[package]
name = "archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
assert_matches = "1.5.0"
bimap = "0.6.2"
compress-tools = "0.13.0"
derivative = "2.2.0"
derive_more = "0.99.17"
duplicate = "0.4.1"
getset = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
tempfile = "3.3.0"
thiserror = "1.0.36"
typed-builder = "0.10.0"
walkdir = "2.3.2"

[dev-dependencies]
hex = "0.4.3"
mockall = "0.11.2"
pretty_env_logger = "0.4.0"
sha2 = "0.10.6"
