[package]
name = "snippets"
version = "0.1.0"
edition = "2021"
description = "Provides a framework and implementations for extracting snippets of programming languages from files"

[features]
default = []

all-languages = ["c", "cpp"]
c = []
cpp = []

[dependencies]
base64 = "0.21.2"
derivative = "2.2.0"
derive_more = "0.99.17"
fallible-iterator = { version = "0.3.0", features = ["std"] }
flagset = "0.4.3"
getset = "0.1.2"
itertools = "0.11.0"
once_cell = "1.18.0"
sha2 = { version = "0.10.7", features = ["asm", "asm-aarch64"] }
strum = { version = "0.25.0", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.47"
tracing = "0.1.37"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-traversal = "0.1.2"
typed-builder = "0.15.2"

[dev-dependencies]
