[package]
name = "traceconf"
version = "1.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
atty = "0.2"
clap = { version = "4.3", features = ["std", "help", "derive"], default-features = false }
getset = "0.1"
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0.183", optional = true }

[dev-dependencies]
insta = { version = "1.30.0", features = ["filters", "json", "yaml"] }
xshell = "0.2.5"
