[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
getset = "0.1.2"
itertools = "0.11.0"
lazy-regex = { version = "3.0.1", features = ["regex", "std"] }
pathdiff = "0.2.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.25", features = ["parsing", "serde", "serde-well-known"] }
traceconf = { path = "../traceconf", version = "*", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
